TrubleshootingYaml/05-limits-exceeded.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigmem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bigmem
  template:
    metadata:
      labels:
        app: bigmem
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            memory: 512Mi  # Exceeds LimitRange
